# FoundersNet

./: .algokit.toml  .env.algorand.example  .env.example  .env.localnet  .env.localnet.example  .env.solana.devnet  .env.solana.localnet  .env.solana.mainnet  .env.solana.testnet  .env.template  .env.testnet  .env.testnet.template  .eslintrc.cjs  .gitignore  .mocharc.json  .replit  ACTIVITY.md  AGENTS.md  ALGOKIT_MIGRATION_PLAN.md  Anchor.toml  CODEBASE_COMPREHENSIVE_INDEX.md  CODEBASE_INDEX.md  DELIVERABLES_INDEX.md  DEMO_MODE_GUIDE.md  DEMO_SCRIPT.md  DEVNET_DEPLOYMENT_GUIDE.md  HACKATHON.md  JUDGES_QUICK_START.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_7_FINAL_REPORT.md  README.md  README_DEMO.md  START-HERE.md  TEST_DOCUMENTATION.md  algokit.yaml  deployment-info.json  (+12 more)
attached_assets/: Pasted--FoundersNet-Environment-Configuration--1761651456157_1761651456158.txt  Pasted--Product-Requirements-Document-PRD-Project-Name-Startup-Prediction-Markets-Hackathon-Dem-1760373432623_1760373432624.txt
client/: index.html
config/: environment.ts  index.ts  networks.ts
deployments/: .gitignore  mainnet.json.example  testnet.json  testnet.json.example
docs/: CANVA-PRESENTATION-TEMPLATE.md  CLEAN-ARCHITECTURE-SUMMARY.md  DEMO-VIDEO-GUIDE.md  LOCALNET-FIX-SUMMARY.md  MIGRATION.md
scripts/: airdrop-localnet.ps1  check-contract.cjs  create-solana-devnet-accounts.ps1  (+21 more)
smart_contracts/solana/programs/prediction_market/: Cargo.toml
smart_contracts/solana/programs/prediction_market/src/: lib.rs
(+127 files in other folders)
